// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpellFormSubmitButton /> should match the snapshot 1`] = `
<FormSubmitWrapper
  block={true}
  disabled={false}
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "verbalComponent": true,
        },
      },
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
  outline={true}
>
  Create Spell
</FormSubmitWrapper>
`;

exports[`<SpellFormSubmitButton /> with isUpdate: true should match the snapshot 1`] = `
<FormSubmitWrapper
  block={true}
  disabled={false}
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "verbalComponent": true,
        },
      },
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
  outline={true}
>
  Update Spell
</FormSubmitWrapper>
`;
